[tool.poetry]
name = "oop-homework"
version = "0.1.0"
description = ""
authors = ["dichenk <dchenk@gmail.com>"]
readme = "README.md"
packages = [{include = "oop_homework"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
